infrastructure/frontend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: royjade/blablabook-front
          ports:
          - containerPort: 1234
          resources:
            limits:
              memory: 2Gi
